<resources>
    <string name="app_name">知乎日报</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">通用设置</string>
    <string name="action_introduce">软件介绍</string>

    <string name="daily">日报</string>
    <string name="theme">主题</string>
    <string name="hot">热门</string>
    <string name="more">专栏</string>
    <string name="app_introduce">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;本App分为日报、主题、热门、专栏4个模块。其他主题和专栏还有二级目录。受限了API提供方，并没有用户模块。所以也没有点赞评论私信等功能。\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;据观察，日报功能与官方读读日报是完成数据同步。其他的3个在读读日报已经是弱化模块，API数据并不能保证每天更新。</string>
    <string name="project_github_address"><u>https://github.com/yaodiwei/ZhihuDaily</u></string>
    <string name="api_github_address"><u>https://github.com/izzyleung/ZhihuDailyPurify/wiki/%E7%9F%A5%E4%B9%8E%E6%97%A5%E6%8A%A5-API-%E5%88%86%E6%9E%90</u></string>
    <string name="open_source_library">com.android.support:appcompat-v7:24.1.0\ncom.android.support:design:24.1.0\ncom.squareup.okhttp3:okhttp:3.3.1\ncom.google.code.gson:gson:2.7\ncom.github.bumptech.glide:glide:3.6.1\ncom.android.support:recyclerview-v7:24.1.0\ncom.android.support:cardview-v7:24.1.1\nio.reactivex:rxjava:1.1.8\nio.reactivex:rxandroid:1.2.1\ncom.github.bumptech.glide:glide:3.6.1\ncom.aurelhubert:ahbottomnavigation:1.4.0\ncom.squareup.retrofit2:retrofit:2.0.0-beta4\ncom.squareup.retrofit2:adapter-rxjava:2.0.0-beta4\ncom.squareup.retrofit2:converter-gson:2.0.0-beta4\ncom.orhanobut:logger:1.15\ncom.jakewharton:butterknife:8.4.0\napt com.jakewharton:butterknife-compiler:8.4.0</string>
    <string name="about_developer">1.转入Android studio的第一个项目,用习惯了的确很爽.\n2.用了最近最潮的RxJava + Retrofit,搭配给力的OkHttp,再来个Glide,在一套下来,在网络简直就是强,无敌.\n3.用了5.0后的Material Design规范和控件.CoordinatorLayout那一套学起来真是不容易,但是配合BottomNavigation用起来显示效果的确好.\n4.之前脑袋有想法,但是没时间整合的一些代码,如StateTool,SettingItemView终于在这个机会整合了一下.感觉不错.\n5.本来就喜欢折腾手机,工作又是写安卓.真想不到有什么比这更好的事情.^.^</string>
    <string name="permission_storage_rationale">不给权限没法干活啊!</string>
    <string name="tip">提示</string>
    <string name="open_permission_dialog">打开权限</string>
    <string name="ok">好的</string>
    <string name="cancel">取消</string>
    <string name="go_to_setting">去设置</string>
    <string name="permission_storage_failed">没有权限,无法执行此功能, 如需要重新打开, 请前往权限管理界面.</string>
    <string name="base_setting">基本设置</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_sdcard_image_cache">清除SD卡里面的图片缓存</string>
    <string name="splash_default_text">永远相信美好的事情即将发生</string>
    <string name="empty_file_size">0B</string>
    <string name="hot_fix">热更新</string>
    <string name="hot_fix_desc">尝试获取热更新包以升级应用</string>
    <string name="click_to_hot_fix">点击更新</string>

</resources>
