<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:navigationIcon="@mipmap/back"
        app:title="通用设置"
        app:titleTextColor="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/base_setting"
                android:textColor="@color/settings_blue" />

            <com.yao.zhihudaily.ui.view.SettingSwitchCompat
                android:id="@+id/setting_switch_compat_splash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:desc_off="启动App时跳过画报"
                app:desc_on="启动App时展示画报"
                app:setting_title="启动时画报" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#DDDDDD" />

            <RelativeLayout
                android:id="@+id/layout_clear_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_listview_item"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:minHeight="?android:listPreferredItemHeight"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_clear_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/clear_cache"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_clear_cache"
                    android:text="@string/clear_sdcard_image_cache"
                    android:textColor="#888888"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_cache_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    tools:text="500KB" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#DDDDDD" />

            <RelativeLayout
                android:id="@+id/layout_hot_fix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_listview_item"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:minHeight="?android:listPreferredItemHeight"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_hot_fix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/hot_fix"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_hot_fix"
                    android:text="@string/hot_fix_desc"
                    android:textColor="#888888"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:text="@string/click_to_hot_fix" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>