<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white"
        app:navigationIcon="@mipmap/back"
        app:title="软件介绍" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="5dp"
                app:contentPaddingBottom="10dp"
                app:contentPaddingLeft="15dp"
                app:contentPaddingRight="15dp"
                app:contentPaddingTop="10dp"
                app:elevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="App介绍"
                        android:textColor="#555"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:autoLink="web"
                        android:text="@string/app_introduce"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="5dp"
                app:contentPaddingBottom="10dp"
                app:contentPaddingLeft="15dp"
                app:contentPaddingRight="15dp"
                app:contentPaddingTop="10dp"
                app:elevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="GitHub地址"
                        android:textColor="#555"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:autoLink="web"
                        android:text="@string/project_github_address"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="5dp"
                app:contentPaddingBottom="10dp"
                app:contentPaddingLeft="15dp"
                app:contentPaddingRight="15dp"
                app:contentPaddingTop="10dp"
                app:elevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="API来源"
                        android:textColor="#555"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:autoLink="web"
                        android:text="@string/api_github_address"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="5dp"
                app:contentPaddingBottom="10dp"
                app:contentPaddingLeft="15dp"
                app:contentPaddingRight="15dp"
                app:contentPaddingTop="10dp"
                app:elevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="感谢开源"
                        android:textColor="#555"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:autoLink="web"
                        android:text="@string/open_source_library"
                        android:textSize="11sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="5dp"
                app:contentPaddingBottom="10dp"
                app:contentPaddingLeft="15dp"
                app:contentPaddingRight="15dp"
                app:contentPaddingTop="10dp"
                android:visibility="gone"
                app:elevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="试试Glide能不能加载gif系列"
                        android:textColor="#555"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/iv1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp" />

                    <ImageView
                        android:id="@+id/iv2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp" />

                    <ImageView
                        android:id="@+id/iv3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="5dp"
                app:contentPaddingBottom="10dp"
                app:contentPaddingLeft="15dp"
                app:contentPaddingRight="15dp"
                app:contentPaddingTop="10dp"
                app:elevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="开发者废话"
                        android:textColor="#555"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:autoLink="web"
                        android:text="@string/about_developer"
                        android:textSize="11sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>
</LinearLayout>

